--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,63 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.31"
+    ext.versions = [
+            // build
+            'versionCode'                 : 1,
+            'versionName'                 : "1.0",
+            'minSdk'                      : 26,
+            'targetSdk'                   : 30,
+            'compileSdk'                  : 30,
+            'gradle'                      : '4.1.3',
+            'kotlin'                      : '1.4.31',
+
+            // core
+            'coreKtx'                     : "1.5.0",
+            'fragmentKtx'                 : "1.2.5",
+            'preferenceKtx'               : "1.1.1",
+            'architectureComponents'      : "2.2.0",
+            'annotations'                 : "1.1.0",
+            'appCompat'                   : "1.3.0",
+            'multidex'                    : "2.0.1",
+            'hilt'                        : '2.28-alpha',
+            'hiltViewModel'               : '1.0.0-alpha01',
+            'material'                    : "1.4.0-rc01",
+
+            //coroutine
+            'coroutines'                  : "1.5.0",
+            'coroutinesLifeCycle'         : "2.3.1",
+
+            // db
+            'room'                        : '2.3.0',
+
+            //navigation
+            'navigation'                  : "2.3.5",
+
+            //network
+            'retrofit'                    : '2.9.0',
+            'moshi'                       : '1.9.2',
+            'okHttp'                      : '4.8.1',
+
+            // MPAndroidChart
+            'mpAndroid'                   : 'v3.1.0',
+
+            // lifeCycle
+            'lifeCycle'                   : '2.3.1',
+
+            //Logging Interceptor
+            'okhttpLoggingInterceptorVersion': '4.7.2',
+
+            //Retrofit coroutine adapter
+            'coroutineAdapter'             : '0.9.2'
+    ]
     repositories {
         google()
         jcenter()
+
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath "com.android.tools.build:gradle:${versions.gradle}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:${versions.hilt}"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,6 +67,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
