--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ buildscript {
             'annotations'                 : "1.1.0",
             'appCompat'                   : "1.3.0",
             'multidex'                    : "2.0.1",
-            'hilt'                        : '2.28-alpha',
+            'hilt'                        : '2.35',
             'hiltViewModel'               : '1.0.0-alpha01',
             'material'                    : "1.4.0-rc01",
 
